--- a/renderer/index.html
+++ b/renderer/index.html
@@ -7,9 +7,11 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
+    <!-- <script type="module" src="./index.js"></script> -->
+    
+    <script src="bundle.js"></script>
     <h1>VUETYYYY</h1>
-    <!-- <script src="bundle.js"></script> -->
   </body>
 </html>
 
