--- a/renderer/index.html
+++ b/renderer/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Vuety</title>
+    <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
+    <script src="node_modules/xterm/lib/xterm.js"></script>
     <!-- <link rel="stylesheet" href="styles.css"> -->
   </head>
   <body>
