--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <!-- <link rel="stylesheet" href="../node_modules/xterm/css/xterm.css" /> -->
-    <title>Vuety</title>
+    <title>BIRDZ'EYE</title>
   </head>
   <body>
     <div id="app"></div>
