--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <!-- <link rel="stylesheet" href="../node_modules/xterm/css/xterm.css" /> -->
     <title>BIRDZ'EYE</title>
   </head>
-  <body>
+  <body style="background-color:#273A4A;">
     <div id="app"></div>
   </body>
 </html>
