added component tree styling

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="../node_modules/xterm/css/xterm.css" /> -->
     <title>BIRDZ'EYE</title>
   </head>
-  <body style="background-color:#273A4A;">
+  <body style="background-color:#273A4A;margin:0;">
     <div id="app"></div>
   </body>
 </html>
